--- a/src/style/App.css
+++ b/src/style/App.css
@@ -4,14 +4,11 @@ html, body, #root, .app {
     margin: 0;
     padding: 0;
     font-family: 'Ubuntu', sans-serif;
+    overflow: hidden;
 }
 
 * {
     box-sizing: border-box;
-}
-
-.app {
-    overflow: hidden;
 }
 
 .app>div.frame {
